Centralize configurable messages and refine arena generation