@@ -1,28 +1,20 @@
 package br.dev.sno0s.hgplugin.listeners;
 
-import br.dev.sno0s.hgplugin.items.Rocket;
-import br.dev.sno0s.hgplugin.items.StatsItem;
+import br.dev.sno0s.hgplugin.items.PluginItems;
 import br.dev.sno0s.hgplugin.utils.Messages;
 import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
-import org.bukkit.event.block.Action;
 import org.bukkit.event.player.PlayerDropItemEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.event.player.PlayerSwapHandItemsEvent;
 import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 public class OnDrop implements Listener {
 
-    private final Set<String> blockedItems = new HashSet<>(Arrays.asList(
-            "§eSeletor de Kits",
-            StatsItem.DISPLAY_NAME,
-            Rocket.DISPLAY_NAME
-    ));
+    private final Set<String> blockedItems = Set.of("kit-selector", "stats", "rocket");
 
     @EventHandler
     public void onOffHandUse(PlayerInteractEvent event) {
@@ -40,11 +32,11 @@ public class OnDrop implements Listener {
 
         if (item == null || !item.hasItemMeta()) return;
 
-        String displayName = item.getItemMeta().getDisplayName();
+        String itemId = PluginItems.id(item);
 
-        if (blockedItems.contains(displayName)) {
+        if (itemId != null && blockedItems.contains(itemId)) {
             event.setCancelled(true);
-            Messages.error(event.getPlayer(), "Você não pode dropar este item.");
+            Messages.error(event.getPlayer(), "items.cannot-drop");
         }
     }
 }
